# python-project-52

./: .env-sample  .gitignore  Makefile  README.md  build.sh  pyproject.toml  render.yaml  setup.cfg
homepage/: admin.py  models.py  urls.py  views.py
staticfiles/: staticfiles.json
task_manager/: forms.py  mixins.py  settings.py  urls.py  views.py
task_manager/labels/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/labels/migrations/: 0001_initial.py
task_manager/status/: forms.py  models.py  tests.py  urls.py  views.py
task_manager/status/migrations/: 0001_initial.py
task_manager/task_manager/: settings.py
task_manager/tasks/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
task_manager/tasks/migrations/: 0001_initial.py  0002_tasklabels_task_labels.py  0003_rename_body_task_description_alter_task_executor_and_more.py
task_manager/templates/: base.html  delete.html  footer.html  form.html  hader.html  index.html
task_manager/templates/labels/: labels.html
task_manager/templates/status/: create_status.html  status.html  status_confirm_delete.html
task_manager/templates/tasks/: tasks.html  tasks_detail.html
task_manager/templates/users/: login.html  logout.html  singup.html  user_confirm_delete.html  user_update_form.html  users.html
task_manager/users/: admin.py  apps.py  forms.py  mixins.py  tests.py  urls.py  views.py
task_manager/users/migrations/: 0001_initial.py  0002_alter_user_first_name_alter_user_last_name.py
tasks/: models.py
users/: apps.py  forms.py  mixins.py  urls.py  views.py
(+2 files in other folders)
